Fixed test v2